# data_controller_monitor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: app_domain.h  application.cpp  application.h  monitor_unit.cpp  monitor_unit.h
controller_data_monitor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
controller_data_monitor/transfer/: serial_transfer.cpp  serial_transfer.h  serial_transfer_domain.cpp  serial_transfer_domain.h  transfer_domain.cpp  transfer_domain.h  transfer_interface.h
controller_data_monitor/widgets/: transfer_settings_widget.cpp  transfer_settings_widget.h  transfer_settings_widget.ui
data_storage/: csv_data_storage.cpp  csv_data_storage.h  data_storage_domain.cpp  data_storage_domain.h  data_storage_factory.cpp  data_storage_factory.h  data_storage_interface.cpp  data_storage_interface.h  data_storage_settings.h
tests/: main.cpp  transfer_settings_widget_tests.cpp
transfer/: serial_transfer.cpp  serial_transfer.h  serial_transfer_domain.cpp  serial_transfer_domain.h  tcpip_transfer.cpp  tcpip_transfer.h  tcpip_transfer_domain.cpp  tcpip_transfer_domain.h  transfer_domain.cpp  transfer_domain.h  transfer_factory.cpp  transfer_factory.h  transfer_interface.cpp  transfer_interface.h
widgets/: component_widgets.cpp  component_widgets.h  data_storage_settings_widget.cpp  data_storage_settings_widget.h  data_storage_settings_widget.ui  label_settings_widget.cpp  label_settings_widget.h  label_settings_widget.ui  mdisubwindow_decorator.cpp  mdisubwindow_decorator.h  monitor_unit_settings_widget.cpp  monitor_unit_settings_widget.h  monitor_unit_settings_widget.ui  transfer_settings_widget.cpp  transfer_settings_widget.h  transfer_settings_widget.ui  view_widget.cpp  view_widget.h
